Update all dark mode function, fixed bug and add some styles

--- a/styles/common.css
+++ b/styles/common.css
@@ -30,7 +30,9 @@ a {
 }
 
 body{
-    background-color: var(--background-color);
+    /* background-color: var(--background-color); Lo comento de momento porque en teoría no queremos fondo negro */
+    transition: all 1s ease-in-out;
+
 }
 
 .types{
@@ -66,6 +68,8 @@ img{
     width: 100%;
     height: 100%;
     color: var(--text-color);
+    background-color: var(--background-color);
+    transition: all 1s ease-in-out;
 }
 .poke:hover{
     position: relative;
