--- a/styles/pokemonlist.css
+++ b/styles/pokemonlist.css
@@ -3,10 +3,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-}
-.oscuro{
-    background-color: #000000;
-    color: white;
+
 }
 #main-title{
     text-decoration: none;
